--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  background-image: linear-gradient(to top, #2aabe4, #9dc8e4);
+  background-image: linear-gradient(to top, #0b709b, #9dc8e4);
 }
 
 .dash-wrapper {
